--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header id="header" class="header">
+      <h1>Online Basic Math Calculator</h1>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
