--- a/calculator.html
+++ b/calculator.html
@@ -30,24 +30,24 @@
         </div>
       </div>
       <div id="buttons" class="buttons">
-        <button>+</button>
-        <button>-</button>
-        <button>x</button>
-        <button>÷</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>⬅️​</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>​🗑️​</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>,</button>
-        <button class="zero">0</button>
-        <button class="result">=</button>
+        <button id="btnPlus">+</button>
+        <button id="btnMinus">-</button>
+        <button id="btnMultiply">x</button>
+        <button id="btnDivide">÷</button>
+        <button id="btn7">7</button>
+        <button id="btn8">8</button>
+        <button id="btn9">9</button>
+        <button id="btnBack">⬅️​</button>
+        <button id="btn4">4</button>
+        <button id="btn5">5</button>
+        <button id="btn6">6</button>
+        <button id="btnDel">​🗑️​</button>
+        <button id="btn1">1</button>
+        <button id="btn2">2</button>
+        <button id="btn3">3</button>
+        <button id="btnComa">,</button>
+        <button id="btn0" class="zero">0</button>
+        <button id="btnResult" class="result">=</button>
       </div>
     </main>
     <footer></footer>
