--- a/calculator.html
+++ b/calculator.html
@@ -30,23 +30,23 @@
         </div>
       </div>
       <div id="buttons" class="buttons">
-        <button id="btnPlus">+</button>
-        <button id="btnMinus">-</button>
-        <button id="btnMultiply">x</button>
-        <button id="btnDivide">÷</button>
-        <button id="btn7">7</button>
-        <button id="btn8">8</button>
-        <button id="btn9">9</button>
-        <button id="btnBack">⬅️​</button>
-        <button id="btn4">4</button>
-        <button id="btn5">5</button>
-        <button id="btn6">6</button>
-        <button id="btnDel">​🗑️​</button>
-        <button id="btn1">1</button>
-        <button id="btn2">2</button>
-        <button id="btn3">3</button>
-        <button id="btnComa">,</button>
-        <button id="btn0" class="zero">0</button>
+        <button id="btnPlus" class="operator">+</button>
+        <button id="btnMinus" class="operator">-</button>
+        <button id="btnMultiply" class="operator">x</button>
+        <button id="btnDivide" class="operator">÷</button>
+        <button id="btn7" class="number">7</button>
+        <button id="btn8" class="number">8</button>
+        <button id="btn9" class="number">9</button>
+        <button id="btnDel" class="delete">⬅️​</button>
+        <button id="btn4" class="number">4</button>
+        <button id="btn5" class="number">5</button>
+        <button id="btn6" class="number">6</button>
+        <button id="btnClear" class="clear">​🗑️​</button>
+        <button id="btn1" class="number">1</button>
+        <button id="btn2" class="number">2</button>
+        <button id="btn3" class="number">3</button>
+        <button id="btnComa" class="number">,</button>
+        <button id="btn0" class="number zero">0</button>
         <button id="btnResult" class="result">=</button>
       </div>
     </main>
