--- a/calculator.html
+++ b/calculator.html
@@ -34,19 +34,19 @@
         <button id="btnMinus" class="operator">-</button>
         <button id="btnMultiply" class="operator">x</button>
         <button id="btnDivide" class="operator">÷</button>
-        <button id="btn7" class="number">7</button>
-        <button id="btn8" class="number">8</button>
-        <button id="btn9" class="number">9</button>
+        <button id="btn7" class="number" value="7">7</button>
+        <button id="btn8" class="number" value="8">8</button>
+        <button id="btn9" class="number" value="9">9</button>
         <button id="btnDel" class="delete">⬅️​</button>
-        <button id="btn4" class="number">4</button>
-        <button id="btn5" class="number">5</button>
-        <button id="btn6" class="number">6</button>
+        <button id="btn4" class="number" value="4">4</button>
+        <button id="btn5" class="number" value="5">5</button>
+        <button id="btn6" class="number" value="6">6</button>
         <button id="btnClear" class="clear">​🗑️​</button>
-        <button id="btn1" class="number">1</button>
-        <button id="btn2" class="number">2</button>
-        <button id="btn3" class="number">3</button>
+        <button id="btn1" class="number" value="1">1</button>
+        <button id="btn2" class="number" value="2">2</button>
+        <button id="btn3" class="number" value="3">3</button>
         <button id="btnComa" class="number">,</button>
-        <button id="btn0" class="number zero">0</button>
+        <button id="btn0" class="number zero" value="0">0</button>
         <button id="btnResult" class="result">=</button>
       </div>
     </main>
