Add numbers buttons listeners

--- a/calculator.html
+++ b/calculator.html
@@ -45,7 +45,7 @@
         <button id="btn1" class="number" value="1">1</button>
         <button id="btn2" class="number" value="2">2</button>
         <button id="btn3" class="number" value="3">3</button>
-        <button id="btnComa" class="number">,</button>
+        <button id="btnComa" class="number" value=",">,</button>
         <button id="btn0" class="number zero" value="0">0</button>
         <button id="btnResult" class="result">=</button>
       </div>
