Make display show first number

--- a/calculator.html
+++ b/calculator.html
@@ -20,12 +20,12 @@
       <div id="display" class="display">
         <div id="display-text" class="display-text">
           <div id="display-operation" class="display-operation">
-            <p id="first-num">8</p>
-            <p id="operator">x</p>
-            <p id="second-num">5</p>
+            <p id="first-num"></p>
+            <p id="operator"></p>
+            <p id="second-num"></p>
           </div>
           <div id="display-result" class="display-result">
-            <p>40</p>
+            <p></p>
           </div>
         </div>
       </div>
