Create listeners for numbers and operators

--- a/calculator.html
+++ b/calculator.html
@@ -25,15 +25,15 @@
             <p id="second-num"></p>
           </div>
           <div id="display-result" class="display-result">
-            <p></p>
+            <p id="display-text-result"></p>
           </div>
         </div>
       </div>
       <div id="buttons" class="buttons">
-        <button id="btnPlus" class="operator">+</button>
-        <button id="btnMinus" class="operator">-</button>
-        <button id="btnMultiply" class="operator">x</button>
-        <button id="btnDivide" class="operator">÷</button>
+        <button id="btnPlus" class="operator" value="+">+</button>
+        <button id="btnMinus" class="operator" value="-">-</button>
+        <button id="btnMultiply" class="operator" value="x">x</button>
+        <button id="btnDivide" class="operator" value="÷">÷</button>
         <button id="btn7" class="number" value="7">7</button>
         <button id="btn8" class="number" value="8">8</button>
         <button id="btn9" class="number" value="9">9</button>
