Partially rewrite some function, still incomplete

--- a/calculator.html
+++ b/calculator.html
@@ -19,13 +19,9 @@
     <main id="calculator" class="calculator">
       <div id="display" class="display">
         <div id="display-text" class="display-text">
-          <div id="display-operation" class="display-operation">
-            <p id="first-num"></p>
-            <p id="operator"></p>
-            <p id="second-num"></p>
+          <p id="display-operation" class="display-operation">
+          <p id="display-result" class="display-result">
           </div>
-          <div id="display-result" class="display-result">
-            <p id="display-text-result"></p>
           </div>
         </div>
       </div>
