Add decimal button

--- a/calculator.html
+++ b/calculator.html
@@ -27,8 +27,8 @@
       </div>
       <div id="buttons" class="buttons">
         <button id="btnPlus" class="operator" value="+">+</button>
-        <button id="btnMinus" class="operator" value="-">-</button>
-        <button id="btnMultiply" class="operator" value="x">x</button>
+        <button id="btnMinus" class="operator" value="-">−</button>
+        <button id="btnMultiply" class="operator" value="x">×</button>
         <button id="btnDivide" class="operator" value="÷">÷</button>
         <button id="btn7" class="number" value="7">7</button>
         <button id="btn8" class="number" value="8">8</button>
@@ -41,7 +41,7 @@
         <button id="btn1" class="number" value="1">1</button>
         <button id="btn2" class="number" value="2">2</button>
         <button id="btn3" class="number" value="3">3</button>
-        <button id="btnComa" class="number" value=",">,</button>
+        <button id="btnDecimal" class="decimal" value=",">,</button>
         <button id="btn0" class="number zero" value="0">0</button>
         <button id="btnResult" class="result">=</button>
       </div>
