--- a/calculator.html
+++ b/calculator.html
@@ -19,8 +19,8 @@
     <main id="calculator" class="calculator">
       <div id="display" class="display">
         <div id="display-text" class="display-text">
-          <p id="display-operation" class="display-operation">
-          <p id="display-result" class="display-result">
+          <p id="display-top" class="display-top">
+          <p id="display-bottom" class="display-bottom">
           </div>
           </div>
         </div>
@@ -41,7 +41,7 @@
         <button id="btn1" class="number" value="1">1</button>
         <button id="btn2" class="number" value="2">2</button>
         <button id="btn3" class="number" value="3">3</button>
-        <button id="btnDecimal" class="decimal" value=",">,</button>
+        <button id="btnDecimal" class="decimal" value=".">.</button>
         <button id="btn0" class="number zero" value="0">0</button>
         <button id="btnResult" class="result">=</button>
       </div>
