Add links, translate to italian

--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>Calcolatrice</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header id="header" class="header">
-      <h1>Basic Math Calculator</h1>
+      <h1>Calcolatrice</h1>
     </header>
     <main id="calculator" class="calculator">
       <div id="display" class="display">
@@ -46,7 +46,43 @@
         <button id="btnResult" class="result">=</button>
       </div>
     </main>
-    <footer></footer>
+    <div id="projects" class="projects">
+      <p>Prova gli altri progetti:</p>
+      <p><a
+          href="https://thruma17.github.io/top-rock-paper-scissors"
+          target="_blank"
+          rel="noopener"
+        >Carta, forbice, sasso 📄✂️🪨
+        </a></p>
+      <p><a
+          href="https://thruma17.github.io/top-etch-a-sketch"
+          target="_blank"
+          rel="noopener"
+        >Disegna 🎨
+        </a></p>
+    </div>
+    <footer class="footer">
+      <p>
+        © 2025-
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        thruma17
+      </p>
+      <p>
+        <a
+          href="https://github.com/thruma17/top-calculator"
+          target="_blank"
+          rel="noopener"
+        >
+          <img
+            class="github-logo"
+            src="../github-mark/github-mark.svg"
+            alt="github-logo"
+          />
+        </a>
+      </p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
