Fix github logo

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         >
           <img
             class="github-logo"
-            src="../github-mark/github-mark.svg"
+            src="github-mark/github-mark.svg"
             alt="github-logo"
           />
         </a>
